--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "eslint": "^7.31.0",
     "eslint-config-xo": "^0.37.0",
     "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-qunit": "^6.2.0",
     "eslint-plugin-unicorn": "^34.0.1",
     "find-unused-sass-variables": "^3.1.0",
     "glob": "^7.1.7",
