--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: Feature request
-description: Suggest an idea for this project
-title: 'Provide a general summary of the feature'
+description: Suggest new or updated features to include.
+title: "Provide a general summary of the feature"
 labels: [feature]
 assignees: []
 body:
@@ -14,20 +14,20 @@ body:
       options:
         - label: I have [searched](https://github.com/twbs/bootstrap/issues?utf8=%E2%9C%93&q=is%3Aissue) for duplicate or closed feature requests
           required: true
-        - label: I have **read** the [contributing guidelines](https://github.com/twbs/bootstrap/blob/main/.github/CONTRIBUTING.md)
+        - label: I have read the [contributing guidelines](https://github.com/twbs/bootstrap/blob/main/.github/CONTRIBUTING.md)
           required: true
   - type: textarea
     id: proposal
     attributes:
       label: Proposal
-      description: Provide detailed information for what we should add, including relevant links to prior art, screenshots, or live demos whenever possible
+      description: Provide detailed information for what we should add, including relevant links to prior art, screenshots, or live demos whenever possible.
       placeholder: Let's be descriptive!
     validations:
       required: true
   - type: textarea
     id: motivation
     attributes:
-      label: Motivation and Context
-      description: Write some reasons, descibing why is this change required or what problem does it solve
+      label: Motivation and context
+      description: Tell us why this change is needed or helpful, and the problems it may help solve.
     validations:
       required: true
