--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,16 +1,13 @@
-name: Bug report
-description: Tell us about a bug you may have identified in Bootstrap.
+name: Report a bug
+description: Tell us about a bug or issue you may have identified in Bootstrap.
 title: "Provide a general summary of the issue"
-labels: [ bug ]
+labels: [bug]
 assignees: "-"
 body:
-  - type: markdown
-    attributes:
-      value: "## Thanks for taking the time to fill out this bug report!"
   - type: checkboxes
     attributes:
       label: Prerequisites
-      description: Please search to see if an issue already exists for the bug you encountered.
+      description: Take a couple minutes to help our maintainers work faster.
       options:
         - label: I have [searched](https://github.com/twbs/bootstrap/issues?utf8=%E2%9C%93&q=is%3Aissue) for duplicate or closed issues
           required: true
@@ -22,62 +19,45 @@ body:
     id: what-happened
     attributes:
       label: Describe the issue
-      description: Provide a general summary of the issue and you expected to happen.
-      placeholder: Tell us what you see!
+      description: Provide a summary of the issue and what you expected to happen, including specific steps to reproduce.
+      placeholder: ""
     validations:
       required: true
   - type: textarea
-    id: steps-to-reproduce
-    attributes:
-      label: Steps to reproduce
-      description: Tell us how to recreate the issue.
-      placeholder: |
-        1. [First step]
-        2. [Second step]
-        3. [and so on...]
-    validations:
-      required: true
-  - type: input
     id: reduced-test-case
     attributes:
-      label: Reduced test case
-      description: Include links to a [reduced test case](https://css-tricks.com/reduced-test-cases/) or suggested fix using [CodePen](https://codepen.io/) or [JS Bin](https://jsbin.com/).
+      label: Reduced test cases
+      description: Include links [reduced test case](https://css-tricks.com/reduced-test-cases/) links or suggested fixes using CodePen ([v4 template](https://codepen.io/team/bootstrap/pen/yLabNQL) or [v5 template](https://codepen.io/team/bootstrap/pen/qBamdLj)).
     validations:
       required: true
-  - type: markdown
-    attributes:
-      value: "Bootstrap 4 [template](https://codepen.io/team/bootstrap/pen/yLabNQL) | Bootstrap 5 [template](https://codepen.io/team/bootstrap/pen/qBamdLj)"
   - type: dropdown
-    id: operating-system
+    id: os
     attributes:
-      label: What operating system are you seeing the problem on?
+      label: What operating system(s) are you seeing the problem on?
       multiple: true
       options:
         - Windows
         - macOS
         - Android
         - iOS
+        - Linux
     validations:
       required: true
   - type: dropdown
-    id: browsers
+    id: browser
     attributes:
-      label: What browsers are you seeing the problem on?
+      label: What browser(s) are you seeing the problem on?
       multiple: true
       options:
-        - Firefox
         - Chrome
         - Safari
+        - Firefox
         - Microsoft Edge
         - Opera
-  - type: dropdown
+  - type: input
     id: version
     attributes:
       label: What version of Bootstrap are you using?
-      multiple: true
-      options:
-        - 3
-        - 4
-        - 5
+      placeholder: "e.g., v5.1.0 or v4.5.2"
     validations:
       required: true
