--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,16 +1,13 @@
 name: Feature request
-description: Suggest new or updated features to include.
-title: "Provide a general summary of the feature"
+description: Suggest new or updated features to include in Bootstrap.
+title: "Suggest a new feature"
 labels: [feature]
 assignees: []
 body:
-  - type: markdown
-    attributes:
-      value: "## Thanks for taking the time to share your ideas!"
   - type: checkboxes
     attributes:
       label: Prerequisites
-      description: Please search to see if a request already exists for the feature you ask for.
+      description: Take a couple minutes to help our maintainers work faster.
       options:
         - label: I have [searched](https://github.com/twbs/bootstrap/issues?utf8=%E2%9C%93&q=is%3Aissue) for duplicate or closed feature requests
           required: true
@@ -21,13 +18,12 @@ body:
     attributes:
       label: Proposal
       description: Provide detailed information for what we should add, including relevant links to prior art, screenshots, or live demos whenever possible.
-      placeholder: Let's be descriptive!
     validations:
       required: true
   - type: textarea
     id: motivation
     attributes:
       label: Motivation and context
-      description: Tell us why this change is needed or helpful, and the problems it may help solve.
+      description: Tell us why this change is needed or helpful, and what problems it may help solve.
     validations:
       required: true
